--- a/index.html
+++ b/index.html
@@ -6,8 +6,60 @@
     <title>Document</title>
 </head>
 <body>
-   <p> "my name is vanshika rana" <br>
-    "i am student of btech cse"</p>
+    <title> CSS Selectors</title>
+   <link rel="stylesheet" href="./style.css">
+   <p> Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quis, autem recusandae voluptate, pariatur facere error numquam maxime saepe dignissimos, illum nam nihil.
+   </p>
+   <p class="jk">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo.
+   </p>
+   <p id="jk1">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus in impedit adipisci, at quos fugit error ad voluptas!
+   </p>
+   <p class="jk" id="jk1">
+    Lorem ipsum dolor sit amet consectetur adipisicing.
+   </p>
+   <style>
+    p{
+        color : red;
+        font-size: 25px;
+    }
+    .jk{
+        color :blue;
+    }
+    #jk1{
+        color : brown;
+    }
+   </style>
+    <div class="p1">Hello world</div>
+    <style>
+       .p1{
+            color: blue;
+            height: 220px;
+            width: 220px;
+            background-color: aqua;
+            text-align: center;
+            align-content: center;
+            padding: 5px;
+            margin: 10px 200px;
+            border: 7px solid pink;
+        }
+    </style>
+    <link rel=""stylesheet" href="./style.css">
+    <div id="external-css">
+        <h1> This is an external css</h1>
+        <p> This is a paragraph for external css</p>
+    </div>
+    <style>
+        #external-css{
+            color: green;
+            background-color: yellow;
+            border: 5px dashed red;
+        }
+        h1{
+            text-align: center;
+        }
+
 
 </body>
 </html>
